--- a/page3.html
+++ b/page3.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=TqhVIm"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=TqhVIm" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=mXgdkT"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=mXgdkT" type="text/css">
 
   
   
@@ -72,7 +72,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md">
                 
-                <h6 class="mbr-section-subtitle mbr-fonts-style mt-0 mb-4 display-5"><strong>At [Your Company], we are dedicated to producing the highest quality essential oils and extracts, using a variety of extraction methods tailored to preserve the integrity and purity of our products. Each method is carefully chosen based on the type of raw material and the desired properties of the final product.</strong></h6>
+                <h6 class="mbr-section-subtitle mbr-fonts-style mt-0 mb-4 display-5"><strong>At Sanjeevi Labs, we are dedicated to producing the highest quality essential oils and extracts, using a variety of extraction methods tailored to preserve the integrity and purity of our products. Each method is carefully chosen based on the type of raw material and the desired properties of the final product.</strong></h6>
             </div>
             <div class="col-md-12 col-lg-6">
               <p class="mbr-text mbr-fonts-style mt-0 mb-0 display-7">
@@ -158,7 +158,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3189467" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-creator.html">Best AI Website Creator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3189467" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com"> Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
