--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=YJfE3q"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=YJfE3q" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=5gfrea"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=5gfrea" type="text/css">
 
   
   
@@ -54,10 +54,10 @@
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
 						<a class="nav-link link text-black text-primary display-4" href="about.html">About</a>
 					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Essential Oils</a></li>
-					<li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle show display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Process</a><div class="dropdown-menu show" aria-labelledby="dropdown-192" data-bs-popper="none"><a class="text-black dropdown-item text-primary display-4" href="page3.html">Steam Distillation</a><a class="text-black dropdown-item text-primary display-4" href="page3.html">Solvent Extraction</a><a class="text-black dropdown-item text-primary display-4" href="page3.html">Cold Pressed Extraction</a><a class="text-black dropdown-item text-primary display-4" href="page3.html">Hydro Distillation</a><a class="text-black show dropdown-item text-primary display-4" href="page3.html">SCFE Extraction</a></div></li>
+					<li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Process</a><div class="dropdown-menu" aria-labelledby="dropdown-192"><a class="text-black dropdown-item text-primary display-4" href="page3.html">Steam Distillation</a><a class="text-black dropdown-item text-primary display-4" href="page3.html">Solvent Extraction</a><a class="text-black dropdown-item text-primary display-4" href="page3.html">Cold Pressed Extraction</a><a class="text-black dropdown-item text-primary display-4" href="page3.html">Hydro Distillation</a><a class="text-black show dropdown-item text-primary display-4" href="page3.html">SCFE Extraction</a></div></li>
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="https://mobiri.se">News</a>
-					</li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">Contact</a></li></ul>
+						<a class="nav-link link text-black text-primary display-4" href="page5.html">News</a>
+					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page4.html">Contact</a></li></ul>
 				
 				<div class="navbar-buttons mbr-section-btn">
 					<a class="btn btn-primary display-4" href="https://mobiri.se">Explore</a>
@@ -95,7 +95,7 @@
       <div class="card col-md-12 col-lg-10">
         <div class="card-wrapper">
           <div class="image-wrapper d-flex justify-content-center mb-4">
-            <img src="https://r.mobirisesite.com/391675/assets/images/photo-1560521166-e4af6324303d.jpeg" alt="Mobirise Website Builder">
+            <img src="assets/images/photo-2024-04-21-22-10-40-1280x720.jpg" alt="Mobirise Website Builder">
           </div>
           <div class="card-content-text">
             <h3 class="card-title mbr-fonts-style mbr-white mt-3 mb-4 display-2">
@@ -725,7 +725,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="RYhrIBTpizvw8BS4kmnnDkqb+BxJ/eKS6/J4wZotztGFFYu97m77ev93oUn+UOdcWsmqyjHRE7x82Z7miiqMxrOHw8gLJX24yqpORPRc2bOp3ogwx1l/OpboI21gznh7">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="g/VFCgGrz5/Chs5TQeiJ2Bo+LDdhxq0aQNsxkhbJN8kYn9KTOEeITqp040Y0Xpb4RpEH50CZyLHuS8Z6uTIdcO3LTYCPn7pVTLIAJCGIk1d2ctH/k63gzMnk4v4YiSLU">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -776,8 +776,7 @@
                             <strong>Phone</strong>
                         </h6>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            <a href="tel:+91 9876543210" class="text-black">+91 9876543210</a>
-                        </p>
+                            India&nbsp;<a href="tel:+91 9876543210" class="text-black">+91 987-654-3210</a><br><a href="tel:+91 9876543210" class="text-black">U</a>Sa +1 908-839-5397</p>
                     </div>
                 </div>
             </div>
@@ -848,7 +847,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3189467" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/masonry/masonry.pkgd.min.js"></script>  <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/scrollgallery/scroll-gallery.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3189467" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/masonry/masonry.pkgd.min.js"></script>  <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/scrollgallery/scroll-gallery.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
 </body>
