--- a/page3.html
+++ b/page3.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@400;700&display=swap&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=mXgdkT"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=mXgdkT" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Q54TzT"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Q54TzT" type="text/css">
 
   
   
@@ -53,10 +53,10 @@
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
 						<a class="nav-link link text-black text-primary display-4" href="about.html">About</a>
 					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html">Essential Oils</a></li>
-					<li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle show display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Process</a><div class="dropdown-menu show" aria-labelledby="dropdown-192" data-bs-popper="none"><a class="text-black dropdown-item text-primary display-4" href="page3.html">Steam Distillation</a><a class="text-black dropdown-item text-primary display-4" href="page3.html">Solvent Extraction</a><a class="text-black dropdown-item text-primary display-4" href="page3.html">Cold Pressed Extraction</a><a class="text-black dropdown-item text-primary display-4" href="page3.html">Hydro Distillation</a><a class="text-black show dropdown-item text-primary display-4" href="page3.html">SCFE Extraction</a></div></li>
+					<li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Process</a><div class="dropdown-menu" aria-labelledby="dropdown-192"><a class="text-black dropdown-item text-primary display-4" href="page3.html">Steam Distillation</a><a class="text-black dropdown-item text-primary display-4" href="page3.html">Solvent Extraction</a><a class="text-black dropdown-item text-primary display-4" href="page3.html">Cold Pressed Extraction</a><a class="text-black dropdown-item text-primary display-4" href="page3.html">Hydro Distillation</a><a class="text-black show dropdown-item text-primary display-4" href="page3.html">SCFE Extraction</a></div></li>
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="https://mobiri.se">News</a>
-					</li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">Contact</a></li></ul>
+						<a class="nav-link link text-black text-primary display-4" href="page5.html">News</a>
+					</li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page4.html">Contact</a></li></ul>
 				
 				<div class="navbar-buttons mbr-section-btn">
 					<a class="btn btn-primary display-4" href="https://mobiri.se">Explore</a>
@@ -158,7 +158,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3189467" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com"> Website Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/3189467" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/ai-website-generator.html">AI Website Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
